# src/main/kotlin/com/ord/core/word/api/capture/facades/WordCaptureFacade.kt
@@ -1,14 +1,11 @@
 package com.ord.core.word.api.capture.facades
 
-import com.ord.core.langugae_proficiency.model.enums.LanguageName
 import com.ord.core.word.api.capture.requests.dto.ActivateManyWordsRequest
 import com.ord.core.word.api.capture.requests.dto.CaptureWordRequest
 import com.ord.core.word.api.capture.requests.dto.PublicWordsBulkCaptureRequest
 import com.ord.core.word.api.capture.requests.dto.UpdateCapturedWordRequest
 import com.ord.core.word.api.crud.responses.dto.WordOverviewResponse
-import com.ord.core.word.api.crud.responses.dto.WordsPaginatedDataResponse
 import com.ord.core.word.models.word.WordDTO
-import com.ord.core.word.models.word.enums.WordStatus
 import org.springframework.http.ResponseEntity
 import reactor.core.publisher.Mono
 import java.util.*
@@ -17,14 +14,6 @@ interface WordCaptureFacade {
     fun capture(userId: UUID, body: List<CaptureWordRequest>): Mono<ResponseEntity<List<WordDTO>>>
 
     fun publicBulkCapture(body: PublicWordsBulkCaptureRequest): Mono<ResponseEntity<Unit>>
-
-    fun getCapturedWords(
-        userId: UUID,
-        page: Int?,
-        perPage: Int?,
-        status: WordStatus?,
-        language: LanguageName,
-    ): Mono<ResponseEntity<WordsPaginatedDataResponse>>
 
     fun getOverview(userId: UUID): Mono<ResponseEntity<WordOverviewResponse>>
 
