# src/main/kotlin/com/ord/core/word/api/crud/responses/dto/SingleWordResponse.kt
@@ -2,7 +2,6 @@ package com.ord.core.word.api.crud.responses.dto
 
 import com.ord.core.langugae_proficiency.model.enums.LanguageName
 import com.ord.core.word.models.word.enums.WordExtraMark
-import com.ord.core.word.models.word.enums.WordStatus
 import com.ord.core.word.models.word.enums.WordType
 import com.ord.core.word.models.word_details.WordDetailsCompactDTO
 import com.ord.core.word.models.word_progress.WordProgressDTO
@@ -13,7 +12,6 @@ import java.util.*
 data class SingleWordResponse(
     val id: UUID,
 
-    var status: WordStatus,
     var type: WordType?,
     var sourceWord: String,
     var translation: String?,
@@ -23,6 +21,7 @@ data class SingleWordResponse(
     var language: LanguageName,
 
     var isBookmarked: Boolean,
+    var isFromUnverifiedSource: Boolean,
     var progress: WordProgressDTO?,
 
     var bank: BankCompact?,
@@ -35,7 +34,6 @@ data class SingleWordResponse(
     companion object {
         val fields = setOf(
             "id",
-            "status",
             "type",
             "source_word",
             "translation",
@@ -43,6 +41,7 @@ data class SingleWordResponse(
             "extra_mark",
             "language",
             "is_bookmarked",
+            "is_from_unverified_source",
             "created_at",
             "updated_at",
         )
