# src/main/kotlin/com/ord/core/word/api/crud/responses/dto/WordListItem.kt
@@ -2,19 +2,20 @@ package com.ord.core.word.api.crud.responses.dto
 
 import com.ord.core.langugae_proficiency.model.enums.LanguageName
 import com.ord.core.word.models.word.enums.WordExtraMark
-import com.ord.core.word.models.word.enums.WordStatus
 import com.ord.core.word.models.word.enums.WordType
 import com.ord.core.word.models.word_progress.WordProgressDTO
 import com.ord.features.bank.dto.BankCompact
+import java.time.Instant
 import java.util.*
 
 data class WordListItem(
     val id: UUID,
 
-    var status: WordStatus,
     var sourceWord: String,
     var translation: String?,
+    var definition: String?,
     var isBookmarked: Boolean,
+    var isFromUnverifiedSource: Boolean,
     var progress: WordProgressDTO?,
 
     var type: WordType?,
@@ -22,14 +23,17 @@ data class WordListItem(
     var language: LanguageName,
 
     val bank: BankCompact?,
+
+    val createdAt: Instant,
 ) {
     companion object {
         val fields = setOf(
             "id",
-            "status",
             "source_word",
             "translation",
+            "definition",
             "is_bookmarked",
+            "is_from_unverified_source",
             "type",
             "extra_mark",
             "language",
